# commandcentos

./: .gitignore  README.md
client-app/: index.html  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
client-app/public/: manifest.webmanifest
client-app/src/: App.tsx  styles.css
server-app/: index.html  package.json  tailwind.config.cjs  vite.config.ts
server-app/src/: App.tsx  main.tsx
server-app/src-tauri/: Cargo.toml  tauri.conf.json
server-app/src-tauri/src/: domain.rs  http.rs  main.rs  state.rs
