[package]
name = "command-center-app"
version = "0.1.0"
edition = "2021"
description = "Remote Command Center Server Console"
authors = ["Remote Command Center Team"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [
  "dialog-all",
  "fs-all",
  "path-all",
  "shell-open",
  "system-tray",
  "window-all"
] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "process", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
